# simple-chatbot-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  PROMPTS.md  README.md  docker-compose.yml  main.py  pyproject.toml
.github/: pull_request_template.md
app/: config.py
app/controllers/: __init__.py  chat.py
app/core/: __init__.py  config.py  database.py  logging.py
app/core/errors/: __init__.py  exceptions.py  handlers.py
app/middleware/: __init__.py  exception_handlers.py  logger_config.py  security_headers.py
app/models/: __init__.py  chat.py  health.py
app/routers/: __init__.py  chat.py  health.py  home.py
app/services/: __init__.py  openai_service.py  prompt_loader.py  summarizer.py
app/utils/: __init__.py  token_util.py
app/utils/errors/: __init__.py  exceptions.py
prompts/: prompts.yaml
prompts/base/: concise.md  default.md  summarizer.md  title_generator.md  tutor.md
prompts/core/: identity.md  persona.md
prompts/intensity/: high.md  low.md  medium.md
prompts/rules/: communication.md  factuality.md  formatting.md  reasoning.md  suppression.md
prompts/styles/: casual.md  formal.md  sarcastic.md
tests/: conftest.py  test_chat.py  test_health.py  test_home.py  test_summarizer.py  test_token_util.py
