[project]
name = "simple-chatbot-api"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "fastapi>=0.129.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "python-json-logger>=4.0.0",
    "sqlmodel>=0.0.34",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.1",
    "taskipy>=1.14.1",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]  # Ignore line-too-long

[tool.taskipy.tasks]
build = "docker compose up --build -d"
start = "docker compose up -d"
stop = "docker compose down"
restart = "docker compose down && docker compose up -d"
logs = "docker compose logs -f"
dev = "uv run uvicorn main:app --reload"
test = "uv run pytest -v"
dev_test = "uv run ruff check . && uv run pytest -v"
format = "uv run ruff format ."
lint = "uv run ruff check ."
fix = "uv run ruff check --fix ."
lock = "uv lock"
